@@ -5,6 +5,13 @@
 \section{Changes in Version 0.0-32 (2016-05-24)}{
   \itemize{
     \item{Introduce \code{as.mlt} generic.}
+    \item{Introduce a \code{coef} slot in \code{ctm} objects
+          and a corresponding \code{coef<-} and \code{coef}
+          method for setting and extracting coefficients
+          to and from unfitted conditional transformation models.}
+    \item{\code{predict}, \code{simulate} and \code{plot}
+          work on \code{ctm} objects (with meaningful coefficients)
+          now.}
   }
 }
 
